# nxpkg

./: .gitignore  Cargo.toml  README.md
docs/: BUILDING.md  CONFIGURATION.md  REPOSITORY.md  SECURITY.md
scripts/: nxpkg-index.sh
src/: compress.rs  config.rs  main.rs  repo.rs  trust.rs
src/buildins/: buildpkg.rs  chroot.rs  meta.rs  mod.rs  profile.rs
src/db/: download.rs  mod.rs  upload.rs
