[package]
name = "nxpkg"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
rusqlite = "0.37.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
flate2 = "1.1.5"
tar = "0.4.44"
indicatif = "0.18.3"
colored = "3.0.0"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde_json = "1.0.145"
walkdir = "2.5.0"
axum = "0.8.7"
ini = "1.3.0"
tokio = { version = "1.48.0", features = ["full"] }
